--- a/assets/editormd/css/editormd.preview.css
+++ b/assets/editormd/css/editormd.preview.css
@@ -2456,7 +2456,7 @@
 .markdown-body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  color: #333;
+  /*color: #333;*/
   overflow: hidden;
   font-family: "Microsoft YaHei", Helvetica, "Meiryo UI", "Malgun Gothic", "Segoe UI", "Trebuchet MS", "Monaco", monospace, Tahoma, STXihei, "华文细黑", STHeiti, "Helvetica Neue", "Droid Sans", "wenquanyi micro hei", FreeSans, Arimo, Arial, SimSun, "宋体", Heiti, "黑体", sans-serif;
   font-size: 16px;
@@ -3327,7 +3327,7 @@ li.L3,
 li.L5,
 li.L7,
 li.L9 {
-  background: #eee;
+  /* background: #eee; */
 }
 
 .editormd-preview-container pre.prettyprint, .editormd-html-preview pre.prettyprint {
